# public/api.yaml
@@ -168,6 +168,22 @@ paths:
           description: not found
         '422':
           description: validation
+  /auth/isauth:
+    get:
+      tags:
+        - Account
+      summary: is auth
+      description: is auth
+      operationId: authIsauth
+      responses:
+        '200': 
+          description: successful 
+        '401':
+          description: not auth   
+        '404':
+          description: not found
+        '422':
+          description: validation
 
 components:
   schemas:
